examples/pos/issue577.effekt

def foo(): Int = {
  var queue: Bool = true
  while (queue is true) {
    queue = false
  }
  0
}

def main() = {
  println(foo())
}