examples/neg/namer/types/box-as-block-param.effekt
def foo { f: (Int, Int) => Bool at {} } = <>
